cambio tipo campo ensayo.transparencia

--- a/views/siloes/_form.ejs
+++ b/views/siloes/_form.ejs
@@ -60,7 +60,7 @@
 		<div class="col-sm-10">
 			<select class="form-control" id="estado" name="siloe[estado]">
 				<option value='abierto' <%if (siloe.estado==='abierto') {%> selected <%}%>>Abierto</option>
-				<option value='cerrado' <%if (siloe.estado==='cerrado') {%> selected <%}%>>Cerrado</option>
+				<option value='cerrado' <%if (siloe.estado==='cerrado') {%> selected <%}%>>Cerrado - 📧</option>
 			</select>
 		</div>
 	</div>
