se cambia el tipo de los campos de ensayo de boolean a string

--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -15,6 +15,12 @@
         margin-right: 10px;
     }
 
+    .ocultar_pc {
+
+        visibility: visible;
+        
+    }
+
 
     /* INICIO =============================================================== */
 
