--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -10,6 +10,12 @@
 @media only screen and (max-width: 1023px) {  			/* tablet */
 @media only screen and (min-width: 768px) {  			/* tablet */
 
+    .ocultar_pc {
+
+        visibility: visible;
+
+    }
+
 
     /* INICIO =============================================================== */
 
@@ -111,8 +117,14 @@
 
 
     /* ========================================================================== */
-    /*  =================================================== */
+    /* = ENSAYOS ================================================================ */
     /* ========================================================================== */
+
+    .marco_item_ensayo {
+
+        min-height: 210px;
+
+    }
 
 
 
