--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -44,12 +44,14 @@
 		</div>
 	</div>
 
+
+
 	<div class="form-group">
-		<label for="preg" class="col-sm-2 control-label">Status:</label>
+		<label for="preg" class="col-sm-2 control-label">Estado:</label>
 		<div class="col-sm-10">
-			<select class="form-control" id="proceso" name="quiz[proceso]">
-				<option value=true <%if (quiz.proceso) {%> selected <%}%>>Pendiente</option>
-				<option value=false <%if (!quiz.proceso) {%> selected <%}%>>Revisado</option>
+			<select class="form-control" id="estado" name="quiz[estado]">
+				<option value='abierto' <%if (quiz.estado==='abierto') {%> selected <%}%>>Abierto</option>
+				<option value='cerrado' <%if (quiz.estado==='cerrado') {%> selected <%}%>>Cerrado - 📧</option>
 			</select>
 		</div>
 	</div>
@@ -87,6 +89,6 @@
 	</div>
 
 
-	
+
 
 </div>
