--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -34,7 +34,7 @@
 					<th class="text-center">Parte</th>
 					<th class="text-center">User</th>
 					<th class="text-center">Centro</th>
-					<th class="text-center">Revisado</th>
+					<th class="text-center">Cerrado</th>
 <!--					<th>Proveedor</th>
 					<th>Motivo</th> -->
 				</tr>
@@ -54,11 +54,13 @@
 						<td class="text-center"><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].id %></a></td>
 						<td class="text-center"><%= quizes[i].UserName %></td>
 						<td class="text-center"><%= quizes[i].centro %></td>
-						<% if (quizes[i].proceso) {%>
-							<td class="text-center"><span class="" aria-hidden="true"></span></td>
-						<%} else {%>
-							<td class="text-center"><i class="fa fa-check"></i></td>
-						<%}%>
+						<td class="text-center">
+							<% if (quizes[i].estado === 'abierto') {%>
+								<span class="" aria-hidden="true"></span>
+							<%} else if (quizes[i].estado === 'cerrado') {%>
+								<i class="fa fa-check"></i>
+							<%}%>
+						</td>
 <!--						<td><%= quizes[i].proveedor %></td>
 						<td><%= quizes[i].pregunta %></td> -->
 						<% if (session.user) {
