se añaden botones de ok en cada campo de los ensayos

--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -409,9 +409,20 @@
 															</div>
 														</div>
 
-														<% if (!ensayos[index].turbidez_cumple) {%>
-															<img class="center-block" src="/images/info4.png" alt="" />
-														<%}%>
+														<br>
+														<div class="row pie_grupo_items_ensayo">
+
+															<div class="col-md-6 ocultar_pc">
+																<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+															</div>
+
+															<div class="col-md-6">
+																<% if (!ensayos[index].turbidez_cumple) { %>
+																	<img class="center-block" src="/images/info4.png" alt="" />
+																<%}%>
+															</div>
+
+														</div>
 													</div>
 
 												</div>
@@ -440,9 +451,20 @@
 															</div>
 														</div>
 
-														<% if (!ensayos[index].isocianuro_cumple) {%>
-															<img class="center-block" src="/images/info4.png" alt="" />
-														<%}%>
+														<br>
+														<div class="row pie_grupo_items_ensayo">
+
+															<div class="col-md-6 ocultar_pc">
+																<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+															</div>
+
+															<div class="col-md-6">
+																<% if (!ensayos[index].isocianuro_cumple) { %>
+																	<img class="center-block" src="/images/info4.png" alt="" />
+																<%}%>
+															</div>
+
+														</div>
 													</div>
 
 												</div>
@@ -471,9 +493,20 @@
 															</div>
 														</div>
 
-														<% if (!ensayos[index].bromo_cumple) {%>
-															<img class="center-block" src="/images/info4.png" alt="" />
-														<%}%>
+														<br>
+														<div class="row pie_grupo_items_ensayo">
+
+															<div class="col-md-6 ocultar_pc">
+																<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+															</div>
+
+															<div class="col-md-6">
+																<% if (!ensayos[index].bromo_cumple) { %>
+																	<img class="center-block" src="/images/info4.png" alt="" />
+																<%}%>
+															</div>
+
+														</div>
 													</div>
 
 												</div>
@@ -502,9 +535,20 @@
 															</div>
 														</div>
 
-														<% if (!ensayos[index].cloro_cumple) {%>
-															<img class="center-block" src="/images/info4.png" alt="" />
-														<%}%>
+														<br>
+														<div class="row pie_grupo_items_ensayo">
+
+															<div class="col-md-6 ocultar_pc">
+																<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+															</div>
+
+															<div class="col-md-6">
+																<% if (!ensayos[index].cloro_cumple) { %>
+																	<img class="center-block" src="/images/info4.png" alt="" />
+																<%}%>
+															</div>
+
+														</div>
 													</div>
 
 												</div>
@@ -533,9 +577,20 @@
 															</div>
 														</div>
 
-														<% if (!ensayos[index].cloro_combinado_cumple) {%>
-															<img class="center-block" src="/images/info4.png" alt="" />
-														<%}%>
+														<br>
+														<div class="row pie_grupo_items_ensayo">
+
+															<div class="col-md-6 ocultar_pc">
+																<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+															</div>
+
+															<div class="col-md-6">
+																<% if (!ensayos[index].cloro_combinado_cumple) { %>
+																	<img class="center-block" src="/images/info4.png" alt="" />
+																<%}%>
+															</div>
+
+														</div>
 													</div>
 
 												</div>
@@ -573,9 +628,20 @@
 																</div>
 															</div>
 
-															<% if (!ensayos[index].humedad_cumple) {%>
-																<img class="center-block" src="/images/info4.png" alt="" />
-															<%}%>
+															<br>
+															<div class="row pie_grupo_items_ensayo">
+
+																<div class="col-md-6 ocultar_pc">
+																	<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+																</div>
+
+																<div class="col-md-6">
+																	<% if (!ensayos[index].humedad_cumple) { %>
+																		<img class="center-block" src="/images/info4.png" alt="" />
+																	<%}%>
+																</div>
+
+															</div>
 														</div>
 
 													</div>
@@ -604,9 +670,20 @@
 																</div>
 															</div>
 
-															<% if (!ensayos[index].co2_interior_cumple) {%>
-																<img class="center-block" src="/images/info4.png" alt="" />
-															<%}%>
+															<br>
+															<div class="row pie_grupo_items_ensayo">
+
+																<div class="col-md-6 ocultar_pc">
+																	<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+																</div>
+
+																<div class="col-md-6">
+																	<% if (!ensayos[index].co2_interior_cumple) { %>
+																		<img class="center-block" src="/images/info4.png" alt="" />
+																	<%}%>
+																</div>
+
+															</div>
 														</div>
 
 													</div>
@@ -635,9 +712,20 @@
 																</div>
 															</div>
 
-															<% if (!ensayos[index].co2_exterior_cumple) {%>
-																<img class="center-block" src="/images/info4.png" alt="" />
-															<%}%>
+															<br>
+															<div class="row pie_grupo_items_ensayo">
+
+																<div class="col-md-6 ocultar_pc">
+																	<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+																</div>
+
+																<div class="col-md-6">
+																	<% if (!ensayos[index].co2_exterior_cumple) { %>
+																		<img class="center-block" src="/images/info4.png" alt="" />
+																	<%}%>
+																</div>
+
+															</div>
 														</div>
 
 													</div>
@@ -712,9 +800,20 @@
 																</div>
 															</div>
 
-															<% if (!ensayos[index].legionella_cumple) {%>
-																<img class="center-block" src="/images/info4.png" alt="" />
-															<%}%>
+															<br>
+															<div class="row pie_grupo_items_ensayo">
+
+																<div class="col-md-6 ocultar_pc">
+																	<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+																</div>
+
+																<div class="col-md-6">
+																	<% if (!ensayos[index].legionella_cumple) { %>
+																		<img class="center-block" src="/images/info4.png" alt="" />
+																	<%}%>
+																</div>
+
+															</div>
 														</div>
 
 													</div>
@@ -890,9 +989,20 @@
 															</div>
 														</div>
 
-														<% if (!ensayos[index].langelier_cumple) {%>
-															<img class="center-block" src="/images/info4.png" alt="" />
-														<%}%>
+														<br>
+														<div class="row pie_grupo_items_ensayo">
+
+															<div class="col-md-6 ocultar_pc">
+																<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+															</div>
+
+															<div class="col-md-6">
+																<% if (!ensayos[index].langelier_cumple) { %>
+																	<img class="center-block" src="/images/info4.png" alt="" />
+																<%}%>
+															</div>
+
+														</div>
 													</div>
 
 												</div>
