Generar Siloe y Excel

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -87,7 +87,8 @@
 
 					<li><a href="/siloes"><img src="/images/probetas.png" alt="" /> Ensayos </a></li>
 					<li><a href="/vasos"><img src="/images/vasos.png" alt="" /> Vasos </a></li>
-					<li><a href="/siloes/resumen_index"><img src="/images/consumos2.png" alt="" /> Siloes </a></li>
+					<li><a href="/siloes/resumen_index"><img src="/images/consumos2.png" alt="" /> Siloes Excel </a></li>
+					<li><a href="/siloes/resumen_index_vaso"><img src="/images/consumos2.png" alt="" /> Siloes Vaso </a></li>
 
 
 					<% if (session.user) {
